# binance-parser

./: .gitignore  Dockerfile  docker-compose.yaml  env.example  requirements.txt  run-backend.sh  run-parser.sh  wait-for-postgres.sh
app/: config.py  main.py  pyproject.toml  yoyo.ini
app/alembic/: env.py
app/api/: tickers.py
app/binance_parser/: db.py  main.py
app/containers/: base.py
app/db/: db.py  redis.py
app/exceptions/: base.py
app/migrations/: 20240108_01_4GJjj.py  apply.py  create_tables.py
app/models/: courses.py
app/schemas/: tickers.py
app/server/: main.py
app/server/api/: dependecies.py  tickers.py
app/server/db/: db.py  redis.py
app/server/schemas/: tikcers.py
app/server/services/: tickers.py
app/services/: tickers.py
